--- a/roles/createVM_builder/tasks/main.yml
+++ b/roles/createVM_builder/tasks/main.yml
@@ -43,9 +43,7 @@
       source: "{{ disk }}"
     # Include public key metadata on the instance
     metadata:
-      ssh-keys: |-
-        "{{ public_key_devopsPC }}"
-        "{{ public_key_ansibleMaster }}"     
+      ssh-keys: "{{ public_key_ansibleMaster }}" 
     # Set label
     labels:
       environment: "{{ instance_name }}"
@@ -63,3 +61,4 @@
     auth_kind: "{{ gcp_cred_kind }}"
     service_account_file: "{{ gcp_cred_file }}"
     state: present
+  notify: isRunningVM
