--- a/roles/createVM_production/handlers/main.yml
+++ b/roles/createVM_production/handlers/main.yml
@@ -2,5 +2,8 @@
 # handlers file for createVM_production
 - name: isRunningVM
   gcp_compute_instance:
+    project: "{{ gcp_project }}"
+    auth_kind: "{{ gcp_cred_kind }}"
+    service_account_file: "{{ gcp_cred_file }}"
     name: "{{ instance_name }}"
     state: RUNNING
