Added building stage

--- a/roles/app_build/defaults/main.yml
+++ b/roles/app_build/defaults/main.yml
@@ -1,2 +1,6 @@
 ---
 # defaults file for app_build
+boxfuse_repo_url: 'https://github.com/boxfuse/boxfuse-sample-java-war-hello.git'
+boxfuse_src_path: /tmp/boxfuse-sample-java-war-hello
+boxfuse_dest_path: /var/lib/tomcat9/webapps
+maven_phase: package
