--- a/roles/app_build/tasks/main.yml
+++ b/roles/app_build/tasks/main.yml
@@ -1,2 +1,9 @@
 ---
 # tasks file for app_build
+- name: Cloning a project from a git
+  git:
+    repo: "{{ boxfuse_repo_url }}"
+    dest: "{{ boxfuse_src_path }}"
+
+- name: Build a project using the maven
+  shell: cd {{ boxfuse_src_path }} && mvn {{ maven_phase }}
