--- a/roles/createVM_production/handlers/main.yml
+++ b/roles/createVM_production/handlers/main.yml
@@ -6,4 +6,6 @@
     auth_kind: "{{ gcp_cred_kind }}"
     service_account_file: "{{ gcp_cred_file }}"
     name: "{{ instance_name }}"
+    machine_type: "{{ machine_type }}"
+    zone: "{{ region }}-{{ zone }}"
     state: RUNNING
