Added production stage

--- a/roles/app_production/tasks/main.yml
+++ b/roles/app_production/tasks/main.yml
@@ -1,2 +1,8 @@
 ---
 # tasks file for app_production
+- name: Copy artifacts from build
+  synchronize:
+    src: "{{ src_path_prj }}"
+    dest: "{{ dest_path_prj }}"
+  delegate_to: "{{ builder_server }}"
+  notify: Tomcat verify
