--- a/roles/prepareVM_production/tasks/main.yml
+++ b/roles/prepareVM_production/tasks/main.yml
@@ -1,2 +1,8 @@
 ---
 # tasks file for prepareVM_production
+
+- name: Ensure all required packages are present
+  apt: pkg={{ item }} update_cache={{ isUpdatePackages }} state={{ expectedStatePackages }}
+  with_items:
+    - default-jdk
+    - tomcat9
